--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 }
 
 
-/* -------------- Banner Style Section -------------- */
+/* banner section style */
 
 .banner-section {
     margin-bottom: 40px;
